--- a/english.html
+++ b/english.html
@@ -835,6 +835,8 @@ Error message and password prompt
 
 <li>Music</li>
 
+<li>My kitchen</li>
+
 <li>My Mother</li>
 
 <li>My whole brother Aharon</li>
@@ -9188,7 +9190,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[My kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11445,7 +11447,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201101131704951" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201109151920049" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13604,6 +13606,18 @@ Within our incessant attempts of understanding this world we live in. How, how c
 
 
  &lt;&lt;heblink [[מוזיקה]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20201109151809401" modified="20201109152606858" tags="Kitchens Houses [[Here in the Ghetto]] [[Corona beings]] [[Food addicts]] [[Menopause sisters]]" title="My kitchen">
+<pre>
+
+[img[pictures/mykitchen.jpg]]
+
+
+
+ &lt;&lt;heblink [[המטבח שלי]]&gt;&gt;
+
 
 </pre>
 </div>
