--- a/index.html
+++ b/index.html
@@ -645,6 +645,8 @@ Error message and password prompt
 
 <li>המטבח של טל</li>
 
+<li>המטבח שלי</li>
+
 <li>המסאז'יסטית</li>
 
 <li>המעבדה</li>
@@ -9269,7 +9271,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201101163931238" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201109152135506" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9278,7 +9280,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המטבח של טל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[המטבח שלי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10714,7 +10716,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201101131823237" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201109152034598" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13027,6 +13029,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ביקשתי מטל, חברתי היפה, שתשלח לי כמה צילומי רוחב מהמטבח היפה שלה, כך [[שגורה|גורה]] תבחר ותצייר. אינני מאוכזבת מבחירתה של גורה, אבל זו רק זווית אחת מתוך מטבח מלא פינות חמד ושכיות חמדה, שהוא מובלעת בתוך בית נפלא שנמצא בתוך חצר גן עדן בכפר בו נולדנו, ושם צילמתי חלק מהקליפ שעשיתי עם [[ג'אזז|Jazz]] [[וגאנג|https://www.youtube.com/watch?v=aKlvDbL4YjU&amp;list=RDaKlvDbL4YjU&amp;start_radio=1&amp;t=0]]   הילדים המופלאים, קצת אחרי שעזבנו. 
 
 &lt;&lt;englink [[Tal's Kitchen]]&gt;&gt;</pre>
+</div>
+<div created="20201109151528213" modified="20201109153656655" tags="מטבחים בתים [[הלכות קורונה]] [[חיות אוכל]] [[כאן בגטו]] [[האחיות בלות]]" title="המטבח שלי">
+<pre>
+[img[pictures/mykitchen.jpg]]
+
+[[אימא של ג'אז]]:
+
+כך נראה המטבח הנוכחי שלנו בלילה. חשוך ורק שרשרת אורות הלד שמודבקת לתחתית הארונות מאירה אותו. בקרוב אלחץ על התמי וכשהמים יהיו חמים אכין חליטת לילה נטולת קופאין וסוכר כיאה לגילי. מי היה מאמין.
+
+
+&lt;&lt;englink [[My kitchen]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170318201423053" modified="20200628163724243" tags="HH" title="המסאז'יסטית">
 <pre>[img[pictures/themasseur.jpg]]
