--- a/english.html
+++ b/english.html
@@ -485,6 +485,8 @@ Error message and password prompt
 
 <li>Edith</li>
 
+<li>Edmund coffee</li>
+
 <li>Elementary</li>
 
 <li>Equalizer in the chest</li>
@@ -9190,7 +9192,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[My kitchen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Edmund coffee]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11186,6 +11188,14 @@ Edith is my [[half-sister|Eva`s family tree]]. She ran away from the estate a ye
 
  &lt;&lt;heblink [[אדית]]&gt;&gt;</pre>
 </div>
+<div created="20201129151207516" modified="20201129152236092" tags="Cafés [[Here in the Ghetto]] [[Corona beings]] Restaurants Kitchens Metafiction Coffee" title="Edmund coffee">
+<pre>[img[pictures/edmundcoffee.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[קפה אדמונד]]&gt;&gt;</pre>
+</div>
 <div created="20190226092627784" modified="20200212165740061" tags="[[TV Series]] TV" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
 
@@ -11447,7 +11457,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201109151920049" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201129151903234" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13610,9 +13620,7 @@ Within our incessant attempts of understanding this world we live in. How, how c
 </pre>
 </div>
 <div created="20201109151809401" modified="20201109152606858" tags="Kitchens Houses [[Here in the Ghetto]] [[Corona beings]] [[Food addicts]] [[Menopause sisters]]" title="My kitchen">
-<pre>
-
-[img[pictures/mykitchen.jpg]]
+<pre>[img[pictures/mykitchen.jpg]]
 
 
 
