--- a/index.html
+++ b/index.html
@@ -1315,6 +1315,8 @@ Error message and password prompt
 
 <li>קפה</li>
 
+<li>קפה אדמונד</li>
+
 <li>קפה וממתקים</li>
 
 <li>קפה מילר</li>
@@ -9271,7 +9273,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201109152135506" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201129192404196" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9280,7 +9282,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המטבח שלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קפה אדמונד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9300,7 +9302,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201101152530328" title="$:/temp/search">
+<div created="20161023184814872" modified="20201129185043559" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13031,8 +13033,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Tal's Kitchen]]&gt;&gt;</pre>
 </div>
 <div created="20201109151528213" modified="20201109153656655" tags="מטבחים בתים [[הלכות קורונה]] [[חיות אוכל]] [[כאן בגטו]] [[האחיות בלות]]" title="המטבח שלי">
-<pre>
-[img[pictures/mykitchen.jpg]]
+<pre>[img[pictures/mykitchen.jpg]]
 
 [[אימא של ג'אז]]:
 
@@ -19651,6 +19652,16 @@ Fapina''
 &lt;&lt;englink [[Coffee]]&gt;&gt;
 
 
+
+</pre>
+</div>
+<div created="20201129151122047" modified="20201129193916815" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
+<pre>
+[img[pictures/edmundcoffee.jpg]]
+
+!!![[יויו]]:
+
+בהמלצת [[ג'אז|Jazz]] קבעתי פגישה [[בקפה אדמונד|https://www.instagram.com/edmundcoffee/]]. הקדמתי לצאת, צועד ביהודה הלוי, חוצה את אלנבי וממשיך עד 33, שם נכנס לחצר ממנה פונה ימינה ונכנס לדלפק הנהדר, ובוחר מהתפריט פרוסת אבוקדו עם טחינה, מקיאטו כפול ועוגיה עם ריבה. את העוגיה אני לוקח איתי במפית, ומשם ברבע סיבוב שמאלה ממשיך ועולה מדרגה אל תוך חצר גדולה ומלאה בשולחנות כאלה ואחרים מרוחקים מספיק זה מזה, לצידם כסאות וספסלים ויש גם במה מדורגת ועץ. אני מתיישב בצד השמאלי של החצר על ספסל פנוי מולו שולחן נמוך, מתבונן סביבי ועיני לא שבעות מהחצר הזו שאולי [[גורה]] תסכים לצייר. קצת אחר כך מובאים אלי הפרוסה והקפה, ואני לועס בנחת וטעים לי. גם הקפה טעים ממש. אני קורא תוך כדי את מומנט מוזיקלי של [[יהושע קנז|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A9%D7%A2_%D7%A7%D7%A0%D7%96]], שנפטר בחודש שעבר, וזה רגע טוב.
 
 </pre>
 </div>
