--- a/index.html
+++ b/index.html
@@ -19655,13 +19655,13 @@ Fapina''
 
 </pre>
 </div>
-<div created="20201129151122047" modified="20201129194349640" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
+<div created="20201129151122047" modified="20201130164343535" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
 <pre>
 [img[pictures/edmundcoffee.jpg]]
 
 !!![[יויו]]:
 
-בהמלצת [[ג'אז|Jazz]] קבעתי פגישה [[בקפה אדמונד|https://www.instagram.com/edmundcoffee/]]. הקדמתי לצאת, צועד ביהודה הלוי, חוצה את אלנבי וממשיך עד 33, שם נכנס לחצר ממנה פונה ימינה ונכנס לדלפק הנהדר. בוחר מהתפריט פרוסת אבוקדו עם טחינה, מקיאטו כפול ועוגיה עם ריבה. את העוגיה אני לוקח איתי במפית, ומשם ברבע סיבוב שמאלה ממשיך ועולה מדרגה אל תוך חצר גדולה ומלאה בשולחנות כאלה ואחרים מרוחקים מספיק זה מזה, לצידם כסאות וספסלים ויש גם במה מדורגת ועץ. אני מתיישב בצד השמאלי של החצר על ספסל פנוי מולו שולחן נמוך, מתבונן סביבי ועיני לא שבעות מהחצר המפתיעה שאולי [[גורה]] תסכים לצייר. קצת אחר כך מובאים אלי הפרוסה והקפה, ואני לועס בנחת וטעים לי. גם הקפה טעים ממש. אני קורא תוך כדי את מומנט מוזיקלי של [[יהושע קנז|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A9%D7%A2_%D7%A7%D7%A0%D7%96]], שנפטר בחודש שעבר, וזה רגע טוב.
+בהמלצת [[ג'אז|Jazz]] קבעתי פגישה [[בקפה אדמונד|https://www.instagram.com/edmundcoffee/]]. הקדמתי לצאת, צועד ביהודה הלוי, חוצה את אלנבי וממשיך עד 33, שם נכנס לחצר ממנה פונה ימינה ונכנס לדלפק הנהדר. בוחר מהתפריט פרוסת אבוקדו עם טחינה, מקיאטו כפול ועוגיה עם ריבה. את העוגיה אני לוקח איתי במפית, ומשם ברבע סיבוב שמאלה ממשיך ועולה שתי מדרגות אל תוך חצר גדולה ומלאה בשולחנות כאלה ואחרים מרוחקים חברתית זה מזה, לצידם כסאות וספסלים ויש גם במה מדורגת ועץ. אני מתיישב בצד השמאלי של החצר על ספסל פנוי מולו שולחן נמוך, מתבונן סביבי ועיני לא שבעות מהחצר המפתיעה שאולי [[גורה]] תסכים לצייר. קצת אחר כך מובאים אלי הפרוסה והקפה, ואני לועס בנחת וטעים לי. גם הקפה טעים ממש. אני קורא תוך כדי את מומנט מוזיקלי של [[יהושע קנז|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A9%D7%A2_%D7%A7%D7%A0%D7%96]], שנפטר בחודש שעבר, וזה רגע טוב.
 
 </pre>
 </div>
