--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,8 @@ Error message and password prompt
 
 <li>מדו</li>
 
+<li>מדיטציית קילוף רימונים</li>
+
 <li>מה עשית היום למען השלום</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
@@ -1404,6 +1406,8 @@ Error message and password prompt
 <li>תחבורה ציבורית</li>
 
 <li>תיקי גב לקניות שדןדן ויויו הכינו</li>
+
+<li>תענית שתיקה</li>
 
 <li>תפוחי אדמה ובטטות בתנור</li>
 
@@ -9273,7 +9277,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201129192404196" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201213105108945" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9282,7 +9286,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קפה אדמונד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9302,7 +9306,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201129185043559" title="$:/temp/search">
+<div created="20161023184814872" modified="20201206151740271" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10718,7 +10722,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201109152034598" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201209163641123" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15150,7 +15154,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[How many songs can you even invent at all]]&gt;&gt;</pre>
 </div>
-<div created="20180416185136170" modified="20200217191632653" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
+<div created="20180416185136170" modified="20201205143210259" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
 
 !!![[יויו]]:
@@ -15159,7 +15163,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 החומרים:
 
-*חצי ק&quot;ג סייטן קצוץ
+*300 גרם &quot;טחון מו הצומח&quot;, שעשוי מסויה
 *שמן זית
 *2 שיני שום חתוכות קטן
 *בצל גדול חתוך לקוביות קטנות
@@ -16257,6 +16261,21 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Meadow]]&gt;&gt;</pre>
+</div>
+<div created="20201204164543310" modified="20201213105400731" tags="[[טיפולים מהספה]] [[הלכות קורונה]] מטבחים [[חיות אוכל]]" title="מדיטציית קילוף רימונים">
+<pre>
+[img[pictures/pomegranatepeeling.jpg]]
+
+
+!!![[רוז'ה]]:
+
+בתוך כדי ימי [[תענית השתיקה|תענית שתיקה]] שהשתתי על עצמי, הלכתי לשוק ועשיתי מיני מלאכות בית ומטבח, מתוך מחשבה שהן יעזרו לי להתרכז ולנשום נכון. הרימונים היו ממש יפים וקניתי חמישה ובבית קילפתי את כולם בזה אחר זה, גרגר אחר גרגר.
+
+
+&lt;&lt;englink [[Pomegranate peeling meditation]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200127105036204" modified="20200226093526373" tags="[[כאן בגטו]] בתים [[סיפורים אמיתיים]] [[מטא בדיון]] [[בדרך לאן שהוא]]" title="מה עשית היום למען השלום">
 <pre>[img[pictures/ma-asita-hayom.jpg]]
@@ -19656,8 +19675,7 @@ Fapina''
 </pre>
 </div>
 <div created="20201129151122047" modified="20201130164343535" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
-<pre>
-[img[pictures/edmundcoffee.jpg]]
+<pre>[img[pictures/edmundcoffee.jpg]]
 
 !!![[יויו]]:
 
@@ -20788,6 +20806,18 @@ Fapina''
 
 
 &lt;&lt;englink [[Self-made backpacks for shopping at the market]]&gt;&gt;</pre>
+</div>
+<div created="20201209163109644" modified="20201213105856739" tags="[[טיפולים מהספה]] [[הלכות קורונה]] אימהות בתים" title="תענית שתיקה">
+<pre>
+[img[pictures/lentofsilence.jpg]]
+
+!!![[רוז'ה]]:
+
+כבר כמה ימים שאני תחת תענית שתיקה שגזרתי על עצמי. אתמול כתבתי הודעת טקסט לאימי ושאלתי אם אוכל לבוא אליה, אבל שאני שותק. היא כתבה לי שהיא אצל סבתא שלי שגרה ברובע השישי, ושאני מוזמן לשתוק שם. הגעתי. השתיים טיפלו בי יפה, ולא ניסו  כלל לדובב אותי לדבר.
+
+
+
+&lt;&lt;englink [[Lent of silence]]&gt;&gt;</pre>
 </div>
 <div created="20170404162732372" modified="20200307175725035" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="תפוחי אדמה ובטטות בתנור">
 <pre>[img[pictures/batatot-batanoor.jpg]]
