--- a/english.html
+++ b/english.html
@@ -717,6 +717,8 @@ Error message and password prompt
 
 <li>Lemons</li>
 
+<li>Lent of silence</li>
+
 <li>Lentil salad</li>
 
 <li>Leonard Cohen</li>
@@ -916,6 +918,8 @@ Error message and password prompt
 <li>Pina Bausch</li>
 
 <li>Plum cake</li>
+
+<li>Pomegranate peeling meditation</li>
 
 <li>Poppy seed chocolate cake</li>
 
@@ -9192,7 +9196,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Edmund coffee]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Lent of silence]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9212,7 +9216,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201012122920021" title="$:/temp/search">
+<div created="20161023184814872" modified="20201205143052874" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11457,7 +11461,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201129151903234" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201209163518099" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12841,6 +12845,14 @@ Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness
 
  &lt;&lt;heblink [[לימונים]]&gt;&gt;
 </pre>
+</div>
+<div created="20201209163406110" modified="20201209163615114" tags="[[Corona beings]] [[Sofa therapy]] Houses Mothers" title="Lent of silence">
+<pre>
+[img[pictures/lentofsilence.jpg]]
+
+
+
+ &lt;&lt;heblink [[תענית שתיקה]]&gt;&gt;</pre>
 </div>
 <div created="20200306153441167" modified="20200306153601813" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Lentil salad">
 <pre>[img[pictures/salat-adashim.jpg]]
@@ -14260,6 +14272,17 @@ The method:
 
  &lt;&lt;heblink [[עוגת שזיפים]]&gt;&gt;
 </pre>
+</div>
+<div created="20201204164409029" modified="20201208163434395" tags="[[Corona beings]] [[Sofa therapy]] Kitchens [[Food addicts]]" title="Pomegranate peeling meditation">
+<pre>
+[img[pictures/pomegranatepeeling.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[מדיטציית קילוף רימונים]]&gt;&gt;</pre>
 </div>
 <div created="20200306160456816" modified="20200306160805616" tags="Baking [[When they sleep]] Recipes [[Food addicts]]" title="Poppy seed chocolate cake">
 <pre>[img[pictures/pereg-shokolad.jpg
