--- a/english.html
+++ b/english.html
@@ -347,6 +347,8 @@ Error message and password prompt
 
 <li>Bolognese-alike</li>
 
+<li>Born &amp; Raised</li>
+
 <li>Bread</li>
 
 <li>Breastplate sisters</li>
@@ -9196,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Lent of silence]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10106,6 +10108,14 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
 
  &lt;&lt;heblink [[כמולונז]]&gt;&gt;
+</pre>
+</div>
+<div created="20201215162341016" modified="20201215162454540" tags="[[Corona beings]] [[Here in the Ghetto]]" title="Born &amp; Raised">
+<pre>[img[pictures/bornandraised.jpg]]
+
+z
+
+ &lt;&lt;heblink [[Born &amp; Raised]]&gt;&gt;
 </pre>
 </div>
 <div created="20200308122901426" modified="20200605133953807" tags="[[Food addicts]] Restaurants Cafés" title="Bread">
@@ -11461,7 +11471,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201209163518099" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201215162420858" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12847,8 +12857,7 @@ Don't want to be a lemonade, I've got sugar in my bitterness, like the happiness
 </pre>
 </div>
 <div created="20201209163406110" modified="20201209163615114" tags="[[Corona beings]] [[Sofa therapy]] Houses Mothers" title="Lent of silence">
-<pre>
-[img[pictures/lentofsilence.jpg]]
+<pre>[img[pictures/lentofsilence.jpg]]
 
 
 
@@ -14273,9 +14282,8 @@ The method:
  &lt;&lt;heblink [[עוגת שזיפים]]&gt;&gt;
 </pre>
 </div>
-<div created="20201204164409029" modified="20201208163434395" tags="[[Corona beings]] [[Sofa therapy]] Kitchens [[Food addicts]]" title="Pomegranate peeling meditation">
-<pre>
-[img[pictures/pomegranatepeeling.jpg]]
+<div created="20201204164409029" modified="20201213161537623" tags="[[Corona beings]] [[Sofa therapy]] Kitchens [[Food addicts]] [[Palms of the hands]]" title="Pomegranate peeling meditation">
+<pre>[img[pictures/pomegranatepeeling.jpg]]
 
 
 
