--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
+<li>Born &amp; Raised</li>
+
 <li>English</li>
 
 <li>HH</li>
@@ -9277,7 +9279,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201213105108945" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201215162917763" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9286,7 +9288,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[Born &amp; Raised]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9477,6 +9479,21 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
 
 &lt;&lt;englink [[blue-marble-hood]]&gt;&gt;
+</pre>
+</div>
+<div created="20201215161824909" modified="20201217161757928" tags="[[הלכות קורונה]] [[כאן בגטו]]" title="Born &amp; Raised">
+<pre>
+[img[pictures/bornandraised.jpg]]
+
+!!![[תומר]]:
+
+אל הסטודיו הפנטסטי של האח והאחות הנהדרים [[אורי ומאיה כהן|https://www.bornandraisedart.com/about]] מגיעים דרך המדרגות הצבעוניות שעולות מהחצר של [[קפה אדמונד]].
+
+
+
+
+&lt;&lt;englink [[Born &amp; Raised]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
@@ -10722,7 +10739,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201209163641123" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201215162533334" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16262,7 +16279,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Meadow]]&gt;&gt;</pre>
 </div>
-<div created="20201204164543310" modified="20201213105400731" tags="[[טיפולים מהספה]] [[הלכות קורונה]] מטבחים [[חיות אוכל]]" title="מדיטציית קילוף רימונים">
+<div created="20201204164543310" modified="20201213161456887" tags="[[טיפולים מהספה]] [[הלכות קורונה]] מטבחים [[חיות אוכל]] [[כפות ידיים]]" title="מדיטציית קילוף רימונים">
 <pre>
 [img[pictures/pomegranatepeeling.jpg]]
 
@@ -19674,12 +19691,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20201129151122047" modified="20201130164343535" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
+<div created="20201129151122047" modified="20201215163106033" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
 <pre>[img[pictures/edmundcoffee.jpg]]
 
 !!![[יויו]]:
 
-בהמלצת [[ג'אז|Jazz]] קבעתי פגישה [[בקפה אדמונד|https://www.instagram.com/edmundcoffee/]]. הקדמתי לצאת, צועד ביהודה הלוי, חוצה את אלנבי וממשיך עד 33, שם נכנס לחצר ממנה פונה ימינה ונכנס לדלפק הנהדר. בוחר מהתפריט פרוסת אבוקדו עם טחינה, מקיאטו כפול ועוגיה עם ריבה. את העוגיה אני לוקח איתי במפית, ומשם ברבע סיבוב שמאלה ממשיך ועולה שתי מדרגות אל תוך חצר גדולה ומלאה בשולחנות כאלה ואחרים מרוחקים חברתית זה מזה, לצידם כסאות וספסלים ויש גם במה מדורגת ועץ. אני מתיישב בצד השמאלי של החצר על ספסל פנוי מולו שולחן נמוך, מתבונן סביבי ועיני לא שבעות מהחצר המפתיעה שאולי [[גורה]] תסכים לצייר. קצת אחר כך מובאים אלי הפרוסה והקפה, ואני לועס בנחת וטעים לי. גם הקפה טעים ממש. אני קורא תוך כדי את מומנט מוזיקלי של [[יהושע קנז|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A9%D7%A2_%D7%A7%D7%A0%D7%96]], שנפטר בחודש שעבר, וזה רגע טוב.
+בהמלצת [[ג'אז|Jazz]] קבעתי פגישה [[בקפה אדמונד|https://www.instagram.com/edmundcoffee/]]. הקדמתי לצאת, צועד ביהודה הלוי, חוצה את אלנבי וממשיך עד 33, שם נכנס לחצר ממנה פונה ימינה ונכנס לדלפק הנהדר. בוחר מהתפריט פרוסת אבוקדו עם טחינה, מקיאטו כפול ועוגיה עם ריבה. את העוגיה אני לוקח איתי במפית, ומשם ברבע סיבוב שמאלה ממשיך ועולה שתי מדרגות אל תוך חצר גדולה ומלאה בשולחנות כאלה ואחרים מרוחקים חברתית זה מזה, לצידם כסאות וספסלים ויש גם במה מדורגת ועצים. אני מתיישב בצד השמאלי של החצר על ספסל פנוי מולו שולחן נמוך, מולי [[מדרגות לגן עדן|Born &amp; Raised]]. קצת אחר כך מובאים אלי הפרוסה עם האבוקדו והקפה, ואני לועס בנחת וטעים לי. לוגם וגם הקפה טעים ממש. אני קורא תוך כדי את מומנט מוזיקלי של [[יהושע קנז|https://he.wikipedia.org/wiki/%D7%99%D7%94%D7%95%D7%A9%D7%A2_%D7%A7%D7%A0%D7%96]], שנפטר בחודש שעבר, וזה רגע טוב.
 
 </pre>
 </div>
