my foot, sabich 29

--- a/english.html
+++ b/english.html
@@ -841,6 +841,8 @@ Error message and password prompt
 
 <li>Music</li>
 
+<li>My foot has ha enough</li>
+
 <li>My kitchen</li>
 
 <li>My Mother</li>
@@ -990,6 +992,8 @@ Error message and password prompt
 <li>Rushell</li>
 
 <li>SA OOTW LW SSR</li>
+
+<li>Sabich 29</li>
 
 <li>Saraleh would have liked it</li>
 
@@ -9198,7 +9202,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[My foot has ha enough]] [[Sabich 29]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11471,7 +11475,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20201215162420858" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20201224161407421" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13640,6 +13644,14 @@ Within our incessant attempts of understanding this world we live in. How, how c
 
 </pre>
 </div>
+<div created="20201224161259309" modified="20201224192055145" tags="[[Corona beings]] [[Here in the Ghetto]] Houses Mothers" title="My foot has ha enough">
+<pre>
+[img[pictures/myfoothashadenough.jpg]]
+
+
+ &lt;&lt;heblink [[נקעה רגלי]]&gt;&gt;
+</pre>
+</div>
 <div created="20201109151809401" modified="20201109152606858" tags="Kitchens Houses [[Here in the Ghetto]] [[Corona beings]] [[Food addicts]] [[Menopause sisters]]" title="My kitchen">
 <pre>[img[pictures/mykitchen.jpg]]
 
@@ -14722,6 +14734,12 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 
 </pre>
+</div>
+<div created="20201220133246322" modified="20201224161136485" tags="[[Food addicts]] [[Corona beings]] Bread [[Here in the Ghetto]]" title="Sabich 29">
+<pre>[img[pictures/sabich29.jpg]]
+
+
+ &lt;&lt;heblink [[סביח 29]]&gt;&gt;</pre>
 </div>
 <div created="20200202175127567" modified="20200725182148141" tags="[[Outer sisters]] Music Closers" title="Saraleh would have liked it">
 <pre>[img[pictures/sarale-hayta.jpg]]
