--- a/index.html
+++ b/index.html
@@ -1137,11 +1137,15 @@ Error message and password prompt
 
 <li>נסענו לאזכרה של אימא</li>
 
+<li>נקעה רגלי</li>
+
 <li>נשימה</li>
 
 <li>נשמה</li>
 
 <li>נתב</li>
+
+<li>סביח 29</li>
 
 <li>סבתא שלנו</li>
 
@@ -9279,7 +9283,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201215162917763" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201224191541400" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9288,7 +9292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Born &amp; Raised]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סביח 29]] [[נקעה רגלי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9308,7 +9312,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201206151740271" title="$:/temp/search">
+<div created="20161023184814872" modified="20201224202733549" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9482,8 +9486,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </pre>
 </div>
 <div created="20201215161824909" modified="20201217161757928" tags="[[הלכות קורונה]] [[כאן בגטו]]" title="Born &amp; Raised">
-<pre>
-[img[pictures/bornandraised.jpg]]
+<pre>[img[pictures/bornandraised.jpg]]
 
 !!![[תומר]]:
 
@@ -10739,7 +10742,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201215162533334" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20201224161550555" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16280,8 +16283,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Meadow]]&gt;&gt;</pre>
 </div>
 <div created="20201204164543310" modified="20201213161456887" tags="[[טיפולים מהספה]] [[הלכות קורונה]] מטבחים [[חיות אוכל]] [[כפות ידיים]]" title="מדיטציית קילוף רימונים">
-<pre>
-[img[pictures/pomegranatepeeling.jpg]]
+<pre>[img[pictures/pomegranatepeeling.jpg]]
 
 
 !!![[רוז'ה]]:
@@ -17302,6 +17304,16 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20201224161210444" modified="20201224202641563" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים אימהות" title="נקעה רגלי">
+<pre>
+[img[pictures/myfoothashadenough.jpg]]
+
+!!![[תומר]]:
+
+השבוע בדרכי לאסוף את [[ננו|ננו שלי ואני]], מעדתי לתוך בור במעבר חצייה ברוטשילד-אלנבי. זה כאב נורא. עיקמתי את הקרסול השמאלי והמשקפיים עפו לי ושתי נשים צעירות הביטו בי בחמלה ושאלו אם הכל בסדר. &quot;לא הכל בסדר&quot;, הרמתי את ראשי ואמרתי להן, מלטף את ברך ימין שחטפה גם כן מכה. הייתה לי עוד כברת דרך הלוך, ולפגוש את כל ההורים בכניסה ולהיות סימפטי, ולחזור הביתה, ולעלות איתה את כל המדרגות. עברו כמה שעות מאז, היא כבר נרדמה, אני על הספה צופה בסדרת מתח בריטית ושותה קפה [[של שרלי|שיח קפה]] עם עוגיות תמרים  [[שאימא של ג'אז|אימא של ג'אז]] העבירה אלי בקופסה. מחר בצהריים אמי תיקח את ננו ליומיים ואני סוג של שמח.
+
+&lt;&lt;englink [[My foot has ha enough]]&gt;&gt;</pre>
+</div>
 <div created="20200727173240984" modified="20200728194914005" tags="[[טיפולים מהספה]] [[בדרך לאן שהוא]]" title="נשימה">
 <pre>[img[pictures/breathing.jpg]]
 
@@ -17344,6 +17356,20 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Technical director]]&gt;&gt;</pre>
+</div>
+<div created="20201220133232289" modified="20201224202903036" tags="[[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]] לחם" title="סביח 29">
+<pre>[img[pictures/sabich29.jpg]]
+
+
+!!![[תומר]]:
+
+כל אחד לוקה בהשכלתו פה ושם, עד כדי שלא מכיר את [[הסביח של אפי|https://timeout.co.il/%D7%A1%D7%91%D7%99%D7%97-29-%D7%90%D7%A4%D7%99/]]. להגנתי אומר שמעולם לא טעמתי [[סביח|https://he.wikipedia.org/wiki/%D7%A1%D7%91%D7%99%D7%97]] לפני אפי  ובטח שלא [[עמבה|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%91%D7%94]]. פשוט לא הייתי מסוגל. אך קרה שלפני כמה שבועות בדרכי [[לדליה|החדר של דליה]] ראיתי [[שפיקוק היקרים|פיקוק]] פתחו חלון, אליו ניגשתי מיד ובלי להתבלבל הזמנתי מנה בלי עמבה. הפיתה מולאה בקפידה בפרוסות חציל דקות מטוגנות, ירקות קצוצים יפה יפה, ביצה קשה בחום בהיר, וכל מה שהסביח דורש. זו הייתה ארוחת בקר נפלאה ומרגיעה והתמכרתי. בשבוע שעבר הבחור שבדלפק הציע לי שאולי כדאי לי לנסות עמבה. הסכמתי לטיפה. הוא שם לי ממש טיפה על קצה של פרוסת חציל. זה היה מעניין ומוזר. ביקשתי עוד קצת. הוא הוסיף בדיוק כפי שביקשתי. אני עדיין לא יודע אם אני אוהב עמבה. אפילו אולי אני לא אוהב עמבה. אבל אני אוהב מאד סביח 29.
+
+
+
+
+&lt;&lt;englink [[Sabich 29]]&gt;&gt;
+</pre>
 </div>
 <div created="20170629191152497" modified="20200426135003801" tags="[[משפחת באומן]] בתים משפחות" title="סבתא שלנו">
 <pre>[img[pictures/savta-shelanu.jpg]]
@@ -20825,8 +20851,7 @@ Fapina''
 &lt;&lt;englink [[Self-made backpacks for shopping at the market]]&gt;&gt;</pre>
 </div>
 <div created="20201209163109644" modified="20201213105856739" tags="[[טיפולים מהספה]] [[הלכות קורונה]] אימהות בתים" title="תענית שתיקה">
-<pre>
-[img[pictures/lentofsilence.jpg]]
+<pre>[img[pictures/lentofsilence.jpg]]
 
 !!![[רוז'ה]]:
 
