--- a/english.html
+++ b/english.html
@@ -841,7 +841,7 @@ Error message and password prompt
 
 <li>Music</li>
 
-<li>My foot has ha enough</li>
+<li>My foot has had enough</li>
 
 <li>My kitchen</li>
 
@@ -9202,7 +9202,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[My foot has ha enough]] [[Sabich 29]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[My foot has had enough]] [[Sabich 29]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13644,7 +13644,7 @@ Within our incessant attempts of understanding this world we live in. How, how c
 
 </pre>
 </div>
-<div created="20201224161259309" modified="20201224192055145" tags="[[Corona beings]] [[Here in the Ghetto]] Houses Mothers" title="My foot has ha enough">
+<div created="20201224161259309" modified="20201224203317839" tags="[[Corona beings]] [[Here in the Ghetto]] Houses Mothers" title="My foot has had enough">
 <pre>
 [img[pictures/myfoothashadenough.jpg]]
 
