--- a/index.html
+++ b/index.html
@@ -9292,7 +9292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סביח 29]] [[נקעה רגלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -17304,7 +17304,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20201224161210444" modified="20201224202641563" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים אימהות" title="נקעה רגלי">
+<div created="20201224161210444" modified="20201224203253051" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים אימהות" title="נקעה רגלי">
 <pre>
 [img[pictures/myfoothashadenough.jpg]]
 
@@ -17312,7 +17312,7 @@ We rise to play a greater part.
 
 השבוע בדרכי לאסוף את [[ננו|ננו שלי ואני]], מעדתי לתוך בור במעבר חצייה ברוטשילד-אלנבי. זה כאב נורא. עיקמתי את הקרסול השמאלי והמשקפיים עפו לי ושתי נשים צעירות הביטו בי בחמלה ושאלו אם הכל בסדר. &quot;לא הכל בסדר&quot;, הרמתי את ראשי ואמרתי להן, מלטף את ברך ימין שחטפה גם כן מכה. הייתה לי עוד כברת דרך הלוך, ולפגוש את כל ההורים בכניסה ולהיות סימפטי, ולחזור הביתה, ולעלות איתה את כל המדרגות. עברו כמה שעות מאז, היא כבר נרדמה, אני על הספה צופה בסדרת מתח בריטית ושותה קפה [[של שרלי|שיח קפה]] עם עוגיות תמרים  [[שאימא של ג'אז|אימא של ג'אז]] העבירה אלי בקופסה. מחר בצהריים אמי תיקח את ננו ליומיים ואני סוג של שמח.
 
-&lt;&lt;englink [[My foot has ha enough]]&gt;&gt;</pre>
+&lt;&lt;englink [[My foot has had enough]]&gt;&gt;</pre>
 </div>
 <div created="20200727173240984" modified="20200728194914005" tags="[[טיפולים מהספה]] [[בדרך לאן שהוא]]" title="נשימה">
 <pre>[img[pictures/breathing.jpg]]
