--- a/index.html
+++ b/index.html
@@ -9283,7 +9283,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201224191541400" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20201225081906947" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9292,7 +9292,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסוף נשאר פתוח]] רקפות [[כישורים חברתיים]] [[פאי פקאן עם קרמל]] [[סביח 29]] [[נקעה רגלי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9312,7 +9312,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201224202733549" title="$:/temp/search">
+<div created="20161023184814872" modified="20201226204506784" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13209,14 +13209,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[Queng's workshop]]&gt;&gt;</pre>
 </div>
-<div created="20170923082302700" modified="20200320093450726" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]] סגירים" title="הסוף נשאר פתוח">
+<div created="20170923082302700" modified="20201226204451665" tags="הסופרנוס טלוויזיה [[בדרך לאן שהוא]] סגירים" title="הסוף נשאר פתוח">
 <pre>[img[pictures/sof-hasopranos.jpg]]
 
 !!![[אנג'ליק]]:
 
 במהלך השבועיים שלושה האחרונים, כל עולמי היה הסופרנוס, שבאו לי בזמן מתאים. המחשבות לא השתוללו. טוני, אימו, אשתו, [[מדו]], איי ג'יי, אנקל ג'וניור, אביו, הקולגות שלו, אחותו. הסדרה נגעה בי בכל רמה ומישור. אימא רעה, אהבה, פחד, סרטים, אוכל, נאמנות, משפחה, משפחה כגוף פוליטי, מיניות, אלימות, שוויוניות, יושר. [[הסוף נשאר פתוח|https://www.youtube.com/watch?v=rnT7nYbCSvM]]. אולי טוני חייב למות, כי מה? עדיף שישב בכלא בשארית חייו ויחזור בתשובה? עדיף שיישאר עם [[פולי|http://www.imdb.com/name/nm0802831/?ref_=ttfc_fc_cl_t7]]?
 
-אולי - גם אם הוא מת, [[הוא מת מואר|https://www.youtube.com/watch?v=S-cbOl96RFM]] בחייק משפחתו הנפלאה. אולי הוא יוכל לעבוד בחסות המאפיונרים האמיתיים - רשויות החוק, והם יחלקו איסלמופוביה? או פשוט קסנופוביה? שכן, ראינו את מדו רצה לכוון דלת המסעדה אחרי שהחנתה סוף סוף, ואת טוני מפעיל את הג'וקבוקס, מביט לדלת - ומסך שחור. גם אם הוא נורה, לא בטוח שזה היה כשהם אכלו את טבעות הבצל, למרות שמבטו האחרון בסדרה לא היה מחייך.
+אולי - גם אם הוא מת, [[הוא מת מואר|https://www.youtube.com/watch?v=S-cbOl96RFM]] בחייק משפחתו הנפלאה. אולי הוא יוכל לעבוד בחסות המאפיונרים האמיתיים - רשויות החוק, והם יחלקו איסלמופוביה? או פשוט קסנופוביה? שכן, ראינו את מדו רצה לכוון דלת המסעדה אחרי שחנתה סוף סוף, ואת טוני מפעיל את הג'וקבוקס, מביט לדלת - ומסך שחור. גם אם הוא נורה, לא בטוח שזה היה כשהם אכלו את טבעות הבצל, למרות שמבטו האחרון בסדרה לא היה מחייך.
 
 קשה לי להיפרד ממשפחת סופרנו. למרות שאני לא בקשר עם הורי, קרי, כביכול, [[שחררתי|טוני סופרנו]] את [[כלי הרכב|הולכת על חבל]] שהביא אותי לכאן. (בחיי שעשיתי את הפוסט הזה והפוסט על אימי [[באחיות|האחיות כהן]], לפני שראיתי את הסופרנוס).
 
@@ -18782,7 +18782,7 @@ May the lord bless your soul, I love you girl
 
 &lt;&lt;englink [[Nectarine pie]]&gt;&gt;</pre>
 </div>
-<div created="20161118213157653" modified="20200813153404456" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי פקאן עם קרמל">
+<div created="20161118213157653" modified="20201225081904194" tags="[[מתכוני ארוחת הכריסמס]] מתכונים אפייה" title="פאי פקאן עם קרמל">
 <pre>[img[pictures/pekan-pie.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -18793,7 +18793,7 @@ May the lord bless your soul, I love you girl
 *כוס וחצי סוכר
 *כוס וחצי  שמנת מתוקה
 
-חומרי גלם לבצק
+חומרי גלם [[לבצק|בצק פריך]]
 
    *מאה וחמשים גרם חמאה
   *שתי כפות סוכר
@@ -18806,18 +18806,23 @@ May the lord bless your soul, I love you girl
 __
 __אופן ההכנה____
 
-הקרמל:
+''הקרמל:''
 
 
 
 *ממיסים את החמאה, וכשהיא נמסה מוסיפים את הסוכר. משתדלים לא לבחוש, אלא מניעים בעדינות את הסיר מצד לצד מעל להבה גבוהה, כדי שהסוכר לא יתגבש. הסוכר הולך ונמס, מזהיב ומשחים.הבועות הולכות, מתרבות ומתעבות…. כשהוא מגיע לצבע חום טופי מעט כהה, ואדים עולים מצידיו הפנימיים של הסיר. *מכבים את האש ומוזגים מאד!! לאט תוך בחישה מתמדת את השמנת המתוקה שהוכנה מראש אל תוך הקרמל.
 ''אזהרה - הקרמל מתחיל לרתוח בטירוף עם מזיגת השמנת, לכן יש להתכונן לפעולה, לשמור מרחק, למזוג לאט ולא להיבהל. יש לבחוש כל העת, למזוג מעט בכל פעם ולערבב עד שהקרמל נרגע ומתקבל נוזל סמיך ורך. בזמן שהקרמל מתקרר, מסדרים על הבצק את חצאי האגוזים. מעליהם יוצקים בעדינות את הקרמל.''
 
+''
+הבצק: (אפשר להסתכל ם במתכון [[בצק פריך]])''
 
-*להכין את הבצק: במעבד מזון או במערבל חשמלי עם להב ה&quot;גיטרה&quot;:
+*במעבד מזון או במערבל חשמלי עם להב ה&quot;גיטרה&quot;:
 *קודם להכניס את החמאה והסוכר והלפעיל את המכשיר עד לקבלת משחה חלקה.
 *להוסיף את שאר החומרים ולהמשיך לערבב עד לקבלת כדור בצק. .
 *לעטוף את הבצק ולקרר.
+''
+הכנת הפאי:''
+
 *לשטח את הבצק בתבנית עגולה 26&quot; ולחורר קלות עם מזלג.
 *לאפות כעשר דקות ב-170 מעלות.
 *להוציא את הבצק מן התנור ולסדר עליו את הפקאנים.
