--- a/index.html
+++ b/index.html
@@ -1009,6 +1009,8 @@ Error message and password prompt
 
 <li>מגדל בבל</li>
 
+<li>מגינת הבריאות של רות</li>
+
 <li>מדו</li>
 
 <li>מדיטציית קילוף רימונים</li>
@@ -9283,7 +9285,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201225081906947" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210102112501454" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9292,7 +9294,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסוף נשאר פתוח]] רקפות [[כישורים חברתיים]] [[פאי פקאן עם קרמל]] [[סביח 29]] [[נקעה רגלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מגינת הבריאות של רות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9312,7 +9314,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20201226204506784" title="$:/temp/search">
+<div created="20161023184814872" modified="20210101132436807" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10742,7 +10744,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20201224161550555" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210102111508456" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16270,6 +16272,16 @@ We rise to play a greater part.
 &lt;&lt;englink [[Tower of Babylon]]&gt;&gt;
 </pre>
 </div>
+<div created="20210102110248204" modified="20210102112706060" tags="[[הלכות קורונה]] [[כאן בגטו]] בתים [[אחיות חוץ]]" title="מגינת הבריאות של רות">
+<pre>[img[pictures/ruthsgarden.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+לכבוד שנת 2021 שהחלה אך אתמול זר של בריאות מהגינה של הרות.
+
+&lt;&lt;englink [[Ruth's garden]]&gt;&gt;
+</pre>
+</div>
 <div created="20170926191733045" modified="20200226112317168" tags="הסופרנוס ילדים טלוויזיה סדרות" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
 
@@ -17305,8 +17317,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20201224161210444" modified="20201224203253051" tags="[[כאן בגטו]] [[הלכות קורונה]] בתים אימהות" title="נקעה רגלי">
-<pre>
-[img[pictures/myfoothashadenough.jpg]]
+<pre>[img[pictures/myfoothashadenough.jpg]]
 
 !!![[תומר]]:
 
