--- a/english.html
+++ b/english.html
@@ -533,6 +533,8 @@ Error message and password prompt
 
 <li>From the kitchen's window</li>
 
+<li>From the kitchen's window 2</li>
+
 <li>Gabriel Fauré</li>
 
 <li>Galsi</li>
@@ -9204,7 +9206,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[From the kitchen's window 2]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9224,7 +9226,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210102111222720" title="$:/temp/search">
+<div created="20161023184814872" modified="20210104140802214" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11477,7 +11479,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210102111409098" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210104140956490" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11560,6 +11562,18 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
 
 
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
+</div>
+<div created="20210104140803643" modified="20210104141647386" tags="[[Corona beings]] [[Here in the Ghetto]] Kitchens Windows Houses" title="From the kitchen's window 2">
+<pre>
+[img[pictures/kitchenswindow2.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[מהחלון של המטבח 2]]&gt;&gt;
+</pre>
 </div>
 <div created="20200215222131458" modified="20200510134947458" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]] [[Stories from the future]]" title="Gabriel Fauré">
 <pre>[img[pictures/gabriel-faure.jpg]]
@@ -14706,8 +14720,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 </pre>
 </div>
 <div created="20210102111224428" modified="20210102111435699" tags="[[Corona beings]] [[Here in the Ghetto]] Houses" title="Ruth's garden">
-<pre>
-[img[pictures/ruthsgarden.jpg]]
+<pre>[img[pictures/ruthsgarden.jpg]]
 
 
  &lt;&lt;heblink [[מגינת הבריאות של רות]]&gt;&gt;</pre>
