--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,8 @@ Error message and password prompt
 
 <li>מהחלון של המטבח</li>
 
+<li>מהחלון של המטבח 2</li>
+
 <li>מהחלון של הרטריט</li>
 
 <li>מהמטבח של אייל שני</li>
@@ -9294,7 +9296,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מגינת הבריאות של רות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהחלון של המטבח 2]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9314,7 +9316,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210101132436807" title="$:/temp/search">
+<div created="20161023184814872" modified="20210104141121950" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10744,7 +10746,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210102111508456" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210104141052024" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16387,6 +16389,15 @@ We rise to play a greater part.
 
 
 </pre>
+</div>
+<div created="20210104140430896" modified="20210104144127470" tags="[[הלכות קורונה]] בתים [[כאן בגטו]] מטבחים חלונות" title="מהחלון של המטבח 2">
+<pre>[img[pictures/kitchenswindow2.jpg]]
+
+!!![[תומר]]:
+
+לא פעם, כשהחלון שממול לחלון המטבח שלנו פתוח, זה אומר שגלעד מטגן ערימת שניצלים גבוהה, שטבל וציפה מבעוד מועד, ונפטפט. וכעת עם יד על ידית המחבת, הוא קצת איתי וקצת עם חברה שמסייעת, ממש בערב הראשון של השנה החדשה לה ייחלנו, 2021 ואומרים אמן.
+
+&lt;&lt;englink [[From the kitchen's window 2]]&gt;&gt;</pre>
 </div>
 <div created="20200503185808988" modified="20200910134657952" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים עצים" title="מהחלון של הרטריט">
 <pre>[img[pictures/retreatswindow.jpg]]
